# simulator

./: CMakeLists.txt  README.md  package.xml
config/: car_parameters.yaml  default_config.rviz  joints_config.yaml
launch/: launch.py
meshes/edin/: ads_dv_chassis.dae
meshes/lrt4/aero/: swan_neck.stl
meshes/lrt4/chassis/: LRT4-CH-NOSE-V5 A.1.stl
meshes/lrt4/wheel_assembly/: tire.stl
urdf/: aero.urdf  car.urdf  car_components.urdf  chassis.urdf  sauvegard.urdf  two_wheeled_robot_nav2.urdf  wheel_assembly.urdf
urdf/sensors/: camera.urdf  imu.urdf  lidar.urdf
urdf/utils/: utils.urdf
worlds/: acceleration.world  blue_cone.dae  model.config
worlds/blue_cone/: model.config  model.sdf
worlds/dry_plane/: asphalt.material  model.config  model.sdf
worlds/orange_cone/: model.config  model.sdf
worlds/orange_cone/meshes/: orange_cone.dae
worlds/yellow_cone/: model.config  model.sdf
worlds/yellow_cone/meshes/: yellow_cone.dae
